[gd_scene load_steps=2 format=2]

[ext_resource path="res://source/actors/utils/SensorPlatform.gd" type="Script" id=1]

[node name="SensorPlatform" type="Node2D"]
script = ExtResource( 1 )

[node name="leftFall" type="RayCast2D" parent="."]
enabled = true
collision_mask = 3

[node name="rightFall" type="RayCast2D" parent="."]
enabled = true
collision_mask = 3
